--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -1,11 +1,10 @@
 {% extends "bootstrap-base.html" %}
 
 
-
 {% block navbar %}
 
 <a href="{{ url_for('app.index') }}">Ordia</a>
-<form action="search">
+<form action="{{ url_for('app.show_search') }}">
     <div class="input-group">
         <input type="text" class="form-control"name="q" id="searchterm" value="{{ query }}"
                placeholder="Search after lemma or form."/>
@@ -22,5 +21,29 @@
 
 {% block content %}
 
+<div class="container">
+  {% block page_content %}{% endblock %}
+</div>
+
+<div class="container">
+  <hr>
+  Data from <a href="https://www.wikidata.org">Wikidata</a> and
+  <a href="https://en.wikipedia.org">English Wikipedia</a>
+  |
+  Code from
+  <a href="https://github.com/fnielsen/ordia">GitHub repository</a>
+  |
+  Hosted on   <a href="https://tools.wmflabs.org/">Wikimedia Toolforge</a>,
+  a <a href="https://wikimediafoundation.org">Wikimedia Foundation</a> service
+  |
+  License for content: CC0 for data, CC-BY-SA for text and media
+  |
+  Report technical problems at Ordia's
+  <a href="https://github.com/fnielsen/scholia/issues">Issues</a> GitHub page.
+</div>
 
 {% endblock %}
+
+
+
+
