--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -3,18 +3,37 @@
 
 {% block navbar %}
 
-<a href="{{ url_for('app.index') }}">Ordia</a>
-<form action="{{ url_for('app.show_search') }}">
-    <div class="input-group">
-        <input type="text" class="form-control"name="q" id="searchterm" value="{{ query }}"
-               placeholder="Search after lemma or form."/>
-        <span class="input-group-btn">
-            <button class="btn btn-primary" type="submit">
-                Search
-            </button>
-        </span>
-    </div>
-</form>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+     <a class="navbar-brand" href="{{ url_for('app.index') }}">Ordia</a>
+     <form class="form-inline" action="{{ url_for('app.show_search') }}">
+       <div class="input-group">
+         <input type="text" class="form-control"
+		name="q" id="searchterm" value="{{ query }}"
+		placeholder="Search after lemma or form"/>
+         <span class="input-group-btn">
+           <button class="btn btn-primary" type="submit">
+             Search
+           </button>
+         </span>
+       </div>
+   
+     </form>
+     
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToogle">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+
+     <div class="collapse navbar-collapse" id="navbarToogle">
+       <ul class="navbar-nav">
+	 <li class="nav-item">
+           <a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L128 (Luftballon)</a>
+	 </li>
+	 <li class="nav-item">
+           <a class="nav-link" href="{{ url_for('app.show_l', l='L128-F4') }}">Example form L28-F4 (vovsernes)</a>
+	 </li>
+       </ul>
+     </div>
+</nav>
 
 {% endblock %}
 
