Removed Wikipedia reference from footer

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -46,8 +46,7 @@
 
 <div class="container">
   <hr>
-  Data from <a href="https://www.wikidata.org">Wikidata</a> and
-  <a href="https://en.wikipedia.org">English Wikipedia</a>
+  Data from <a href="https://www.wikidata.org">Wikidata</a>
   |
   Code from
   <a href="https://github.com/fnielsen/ordia">GitHub repository</a>
