Add a warning for incomplete search results

--- a/ordia/app/templates/search.html
+++ b/ordia/app/templates/search.html
@@ -3,6 +3,11 @@
 {% block page_content %}
 
 <div class="search-results">
+
+  <div class="alert alert-warning" role="alert">
+    Currently, only a limited set of lexemes and forms are searched,
+    so the search results may not be complete.
+  </div>
   
     <h2>Search results</h2>
 
