Add warning about limited set of lexemes shown

--- a/ordia/app/templates/language.html
+++ b/ordia/app/templates/language.html
@@ -3,6 +3,12 @@
 
 {% block page_content %}
 
+  <div class="alert alert-warning" role="alert">
+    Currently, only a limited set of lexemes and forms are listed
+    as the list is not automatically updated.
+  </div>
+
+
 <div class="language-entries">
   <h1>{{ language }}</h1>
 
