--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -26,6 +26,12 @@
      <div class="collapse navbar-collapse" id="navbarToogle">
        <ul class="navbar-nav">
 	 <li class="nav-item">
+	   <a class="nav-link" href="{{ url_for('app.show_language_index') }}">Languages</a>
+	 </li>
+	 <li class="nav-item">
+	   <a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">Grammatical features</a>
+	 </li>
+	 <li class="nav-item">
            <a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L99 (Luftballon)</a>
 	 </li>
 	 <li class="nav-item">
