--- a/ordia/app/templates/language_index.html
+++ b/ordia/app/templates/language_index.html
@@ -1,28 +1,43 @@
 {% extends "base.html" %}
 
 
+{% block scripts %}
+{{super()}}
+
+<script type="text/javascript">
+    languagesSparql = `
+# List of languages with count of the number of lexemes
+SELECT ?number_of_lexemes ?language ?languageLabel
+WITH {
+  SELECT ?language (COUNT(*) AS ?number_of_lexemes) WHERE {
+    [] dct:language ?language .
+  }
+  GROUP BY ?language
+} AS %languages
+WHERE {
+  INCLUDE %languages
+  SERVICE wikibase:label { bd:serviceParam wikibase:language "[AUTO_LANGUAGE],en". }
+}
+ORDER BY DESC(?number_of_lexemes)
+  `
+
+
+ $(document).ready(function() {
+     sparqlToDataTable(languagesSparql, "#languages",
+		       {'linkPrefixes': {'language': '../language/'}});
+ });
+
+</script>
+
+{% endblock %}
+
+
 {% block page_content %}
-
-  <div class="alert alert-warning" role="alert">
-    Currently, not all languages may be listed 
-    as the list is not automatically updated.
-  </div>
-
 
 <div class="languages">
   <h1>Languages</h1>
 
-  <ul>
-      {% for language, count in lexeme_count_per_language.items() %}
-      
-      <li>
-	  <a href="{{ url_for('app.show_language', language=language) }}">{{ language }}</a>
-	  ({{ count }} lexemes and forms)
-      </li>
-
-      {% endfor %}
-
-  </ul>
+  <table class="table table-hover" id="languages"></table>
 
 </div>
 
