--- a/ordia/app/templates/language_index.html
+++ b/ordia/app/templates/language_index.html
@@ -23,8 +23,8 @@ ORDER BY DESC(?number_of_lexemes)
 
 
  $(document).ready(function() {
-     sparqlToDataTable(languagesSparql, "#languages",
-		       {'linkPrefixes': {'language': '../language/'}});
+     sparqlToDataTable(languagesSparql, "#languages");
+		      //  {'linkPrefixes': {'language': '../language/'}});
  });
 
 </script>
