Fix link path on language index page

--- a/ordia/app/templates/language_index.html
+++ b/ordia/app/templates/language_index.html
@@ -24,7 +24,7 @@ ORDER BY DESC(?number_of_lexemes)
 
  $(document).ready(function() {
      sparqlToDataTable(languagesSparql, "#languages");
-		      //  {'linkPrefixes': {'language': '../language/'}});
+		      //  {'linkPrefixes': {'language': '/language/'}});
  });
 
 </script>
