Change path in language column of lexemes on q page

--- a/ordia/app/templates/q.html
+++ b/ordia/app/templates/q.html
@@ -23,7 +23,11 @@ SELECT ?lexeme ?lexemeLabel ?language ?languageLabel ?sense ?senseLabel WHERE {
 
 
  $(document).ready(function() {
-     sparqlToDataTable(lexemesSparql, "#lexemes");
+     sparqlToDataTable(lexemesSparql, "#lexemes", {
+	 'linkPrefixes': {
+	     'language': '/language/'
+	 }
+     });
  });
 
 </script>
